--- a/.skhdrc
+++ b/.skhdrc
@@ -1,18 +1,31 @@
 #  NOTE(koekeishiya): A list of all built-in modifier and literal keywords can
 #                     be found at https://github.com/koekeishiya/skhd/issues/1
 
-# open terminal
-lalt + shift - return : open -a /Applications/iTerm.app/Contents/MacOS/iTerm2 ~/
-
-# open browser
-lalt - b : osascript -e 'tell application "Safari" to make new document'
-
-# take a screenshot
-lalt + shift -s : screencapture ~/Pictures/`date +%Y-%m-%d-%H-%M-%S`.png
-
-# open spotify
-lalt - m : open -a spotify
+# Launch Applications
+alt + shift - return : "${HOME}"/.config/yabai/scripts/open_iterm2.sh #terminal
+lalt - b : osascript -e 'tell application "Safari" to make new document' #browser
+lalt + shift -s : screencapture ~/Pictures/`date +%Y-%m-%d-%H-%M-%S`.png #screenshot
+lalt - m : open -a spotify #spotify
 
 
+# Navigation
+alt - h : yabai -m window --focus west
+alt - j : yabai -m window --focus south
+alt - k : yabai -m window --focus north
+alt - l : yabai -m window --focus east
 
- 
+# Moving windows
+shift + alt - h : yabai -m window --warp west
+shift + alt - j : yabai -m window --warp south
+shift + alt - k : yabai -m window --warp north
+shift + alt - l : yabai -m window --warp east
+
+# Move focus container to workspace
+shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
+alt - 1 : yabai -m space --focus 1
+shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
+alt - 2 : yabai -m space --focus 2
+shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
+alt - 3 : yabai -m space --focus 3
+shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
+alt - 4 : yabai -m space --focus 4
