--- a/.yabairc
+++ b/.yabairc
@@ -1,84 +1,80 @@
 #!/usr/bin/env sh
 
-# Automatically start yabai on macOS Big Sur, see yabai wiki for first time setup
+# ====== Variables =============================
+
+declare -A gaps
+declare -A color
+
+gaps["top"]="4"
+gaps["bottom"]="24"
+gaps["left"]="4"
+gaps["right"]="4"
+gaps["inner"]="4"
+
+color["focused"]="0xE0808080"
+color["normal"]="0x00010101"
+color["preselect"]="0xE02d74da"
+
+# ===== Loading Scripting Additions ============
+
+# See: https://github.com/koekeishiya/yabai/wiki/Installing-yabai-(latest-release)#macos-big-sur---automatically-load-scripting-addition-on-startup
 sudo yabai --load-sa
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
-# enable debug output
-yabai -m config debug_output on
+# ===== Tiling setting =========================
 
-# global settings
+yabai -m config layout                      bsp
 
-# set focus follows mouse mode (options: off, autoraise, autofocus)
-yabai -m config focus_follows_mouse autofocus
+yabai -m config top_padding                 "${gaps["top"]}"
+yabai -m config bottom_padding              "${gaps["bottom"]}"
+yabai -m config left_padding                "${gaps["left"]}"
+yabai -m config right_padding               "${gaps["right"]}"
+yabai -m config window_gap                  "${gaps["inner"]}"
 
-# set mouse follows focus mode
+yabai -m config focus_follows_mouse off
 yabai -m config mouse_follows_focus          off
 
-# yabai -m config window_origin_display        default
+yabai -m config window_topmost              off
+yabai -m config window_opacity              off
+yabai -m config window_shadow               float
 
-# New window spawns to the right if vertical split, or bottom if horizontal split
-yabai -m config window_placement second_child
+yabai -m config window_border               on
+yabai -m config window_border_width         2
+yabai -m config active_window_border_color  "${color["focused"]}"
+yabai -m config normal_window_border_color  "${color["normal"]}"
+yabai -m config insert_feedback_color       "${color["preselect"]}"
 
-# floating windows are always on top
-yabai -m config window_topmost               off
+yabai -m config active_window_opacity       1.0
+yabai -m config normal_window_opacity       0.90
+yabai -m config split_ratio                 0.50
 
-# modify window shadows (options: on, off, float)
-# example: show shadows only for floating windows
-yabai -m config window_shadow                on
+yabai -m config auto_balance                off
 
-# window opacity
-yabai -m config window_opacity               off
-yabai -m config window_opacity_duration      0.0
-yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.90
+yabai -m config mouse_modifier              fn
+yabai -m config mouse_action1               move
+yabai -m config mouse_action2               resize
 
-
-
-yabai -m config window_border                off
-yabai -m config window_border_width          6
-yabai -m config active_window_border_color   0xff775759
-yabai -m config normal_window_border_color   0xff555555
-yabai -m config insert_feedback_color        0xffd75f5f
-
-# Percentage of free space a new window takes up
-yabai -m config split_ratio                  0.50
-
-# Enabled makes it so that all windows always occupy equal space no matter how deeply nested
-yabai -m config auto_balance                 off
-
-# set mouse interaction modifier key (default: fn)
-yabai -m config mouse_modifier fn
-
-# set modifier + left-click drag to resize window (default: move)
-yabai -m config mouse_action1 move
-
-# set modifier + right-click drag to resize window (default: resize)
-yabai -m config mouse_action2 resize
-
-# New window spawns to the right if vertical split, or bottom if horizontal split
-yabai -m config mouse_drop_action            swap
-
-# general space settings
-yabai -m config layout                       bsp
-
-# padding and gap settings
-yabai -m config top_padding                  12
-yabai -m config bottom_padding               12
-yabai -m config left_padding                 12
-yabai -m config right_padding                12
-yabai -m config window_gap                   09
-
-# space labels
+# ===== Spaces ==================================
 yabai -m space 1 --label "Main"
 yabai -m space 2 --label "Lap"
 yabai -m space 3 --label "Float"
+yabai -m config --space 3 layout             float
 yabai -m space 4 --label "Tools"
 yabai -m space 5 --label "Media"
 yabai -m space 6 --label "Social"
 yabai -m space 7 --label "Other"
 
-# sets layout to float for space 3 only
-yabai -m config --space 3 layout             float
+# ===== Rules ==================================
+
+yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
+yabai -m rule --add label="Safari" app="^Safari$" title="^(General|(Tab|Password|Website|Extension)s|AutoFill|Se(arch|curity)|Privacy|Advance)$" manage=off
+yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
+yabai -m rule --add label="App Store" app="^App Store$" manage=off
+yabai -m rule --add label="Activity Monitor" app="^Activity Monitor$" manage=off
+yabai -m rule --add label="Calculator" app="^Calculator$" manage=off
+yabai -m rule --add label="Software Update" title="Software Update" manage=off
+yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
+
+# ===== Signals ================================
 
 echo "yabai configuration loaded.."
