--- a/.skhdrc
+++ b/.skhdrc
@@ -2,17 +2,14 @@
 #                     be found at https://github.com/koekeishiya/skhd/issues/1
 
 # Launch Applications
-alt + shift - return : "${HOME}"/.config/yabai/scripts/open_iterm2.sh #terminal
+alt + shift - return : bash ~/Desktop/Mac/scripts/open_iterm2.sh #terminal
 lalt - b : osascript -e 'tell application "Safari" to make new document' #browser
 lalt + shift -s : screencapture ~/Pictures/`date +%Y-%m-%d-%H-%M-%S`.png #screenshot
 lalt - m : open -a spotify #spotify
 
-
 # Navigation
-alt - h : yabai -m window --focus west
-alt - j : yabai -m window --focus south
-alt - k : yabai -m window --focus north
-alt - l : yabai -m window --focus east
+alt - j : yabai -m window --focus $(yabai -m query --windows --space | jq 'sort_by(.id) | .[(to_entries | .[] | select(.value.focused == 1) | .key + 1) % length] | .id')
+alt - k : yabai -m window --focus $(yabai -m query --windows --space | jq 'sort_by(.id) | .[(to_entries | .[] | select(.value.focused == 1) | .key - 1) % length] | .id')
 
 # Moving windows
 shift + alt - h : yabai -m window --warp west
@@ -20,12 +17,55 @@ shift + alt - j : yabai -m window --warp south
 shift + alt - k : yabai -m window --warp north
 shift + alt - l : yabai -m window --warp east
 
-# Move focus container to workspace
-shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
+# Workspaces
 alt - 1 : yabai -m space --focus 1
-shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
+shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
 alt - 2 : yabai -m space --focus 2
-shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
+shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
 alt - 3 : yabai -m space --focus 3
-shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
+shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
 alt - 4 : yabai -m space --focus 4
+shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
+alt - 5 : yabai -m space --focus 5
+shift + alt - 5 : yabai -m window --space 5; yabai -m space --focus 5
+alt - 6 : yabai -m space --focus 6
+shift + alt - 6 : yabai -m window --space 6; yabai -m space --focus 6
+alt - 7 : yabai -m space --focus 7
+shift + alt - 7 : yabai -m window --space 7; yabai -m space --focus 7
+alt - 8 : yabai -m space --focus 8
+shift + alt - 8 : yabai -m window --space 8; yabai -m space --focus 8
+alt - 9 : yabai -m space --focus 9
+shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
+
+# Resize windows
+lctrl + alt - h : yabai -m window --resize left:-50:0; \
+                  yabai -m window --resize right:-50:0
+lctrl + alt - j : yabai -m window --resize bottom:0:50; \
+                  yabai -m window --resize top:0:50
+lctrl + alt - k : yabai -m window --resize top:0:-50; \
+                  yabai -m window --resize bottom:0:-50
+lctrl + alt - l : yabai -m window --resize right:50:0; \
+                  yabai -m window --resize left:50:0
+alt - e : yabai -m space --balance
+
+# Adjusting Windows
+alt - g : yabai -m space --toggle padding; yabai -m space --toggle gap
+alt - r         : yabai -m space --rotate 270
+shift + alt - r : yabai -m space --rotate 90
+shift + alt - x : yabai -m space --mirror x-axis
+shift + alt - y : yabai -m space --mirror y-axis
+
+# Make window native fullscreen
+alt - space         : yabai -m window --toggle zoom-fullscreen
+shift + alt - space : yabai -m window --toggle native-fullscreen
+
+# Float / Unfloat window
+alt - t : \
+    yabai -m window --toggle float; \
+    yabai -m window --toggle border
+
+# Restart Yabai
+alt - q : \
+    /usr/bin/env osascript <<< \
+        "display notification \"Restarting Yabai\" with title \"Yabai\""; \
+    launchctl kickstart -k "gui/${UID}/homebrew.mxcl.yabai"
