--- a/.skhdrc
+++ b/.skhdrc
@@ -8,8 +8,10 @@ lalt + shift -s : screencapture ~/Pictures/`date +%Y-%m-%d-%H-%M-%S`.png #screen
 lalt - m : open -a spotify #spotify
 
 # Navigation
-alt - j : yabai -m window --focus $(yabai -m query --windows --space | jq 'sort_by(.id) | .[(to_entries | .[] | select(.value.focused == 1) | .key + 1) % length] | .id')
-alt - k : yabai -m window --focus $(yabai -m query --windows --space | jq 'sort_by(.id) | .[(to_entries | .[] | select(.value.focused == 1) | .key - 1) % length] | .id')
+alt - h : yabai -m window --focus west
+alt - j : yabai -m window --focus south
+alt - k : yabai -m window --focus north
+alt - l : yabai -m window --focus east
 
 # Moving windows
 shift + alt - h : yabai -m window --warp west
@@ -60,10 +62,9 @@ alt - space         : yabai -m window --toggle zoom-fullscreen
 shift + alt - space : yabai -m window --toggle native-fullscreen
 
 # Float / Unfloat window
-alt - t : \
-    yabai -m window --toggle float; \
-    yabai -m window --toggle border
-
+alt - t : yabai -m window --toggle float
+alt + shift - t : yabai -m space --layout bsp
+alt + ctrl - t : yabi -m space --layout float
 # Restart Yabai
 alt - q : \
     /usr/bin/env osascript <<< \
