--- a/.yabairc
+++ b/.yabairc
@@ -27,6 +27,7 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 yabai -m config layout                      bsp
 
 yabai -m config top_padding                 "${gaps["top"]}"
+yabai -m config external_bar main:20:0
 yabai -m config bottom_padding              "${gaps["bottom"]}"
 yabai -m config left_padding                "${gaps["left"]}"
 yabai -m config right_padding               "${gaps["right"]}"
@@ -35,7 +36,7 @@ yabai -m config window_gap                  "${gaps["inner"]}"
 yabai -m config focus_follows_mouse off
 yabai -m config mouse_follows_focus          off
 
-yabai -m config window_topmost              off
+yabai -m config window_topmost              on
 yabai -m config window_opacity              off
 yabai -m config window_shadow               float
 
