--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -215,10 +215,10 @@ draw_bold_text_with_bright_colors: true
 # Colors (Dracula)
 colors:
   # Default colors
-  primary:
-    background: '#2f3441'
+  #primary:
+    #background: '#2f3441'
     # background: '0x282a36'
-    foreground: '0xf8f8f2'
+    #foreground: '0xf8f8f2'
 
   # Normal colors
   normal:
