--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -113,7 +113,7 @@ font:
     # family: RobotoMono Nerd Font
     # family: Hack
     # family: JetBrains Mono Nerd Font
-    #family: UbuntuMono Nerd Font
+    family: FiraCode Nerd Font
     # family: Monofur Nerd Font
     # family: TerminessTTF Nerd Font
     # family: Mononoki Nerd Font
